Fix chat prefix plugin